# Agrobot

./: .gitignore
robot_package/: CMakeLists.txt  README.md  configs.rviz  package.xml  robot.sdf  robot_control_plugin.cc  setup.py
robot_package/launch/: keyboard.launch  main.launch  move.launch  realsense_cpp.launch  vision.launch
robot_package/models/camera/: camera.sdf
robot_package/models/greenhouse_mini/: greenhouse.sdf  model.config
robot_package/models/mecanum_wheel_left/: mecanum_wheel_left.sdf  model.config
robot_package/models/mecanum_wheel_right/: mecanum_wheel_right.sdf  model.config
robot_package/models/rail_wheel/: model.config  rail_wheel.sdf
robot_package/models/robot_body/: robot_body.sdf
robot_package/models/robot_body/meshes/: robot_body.mtl
robot_package/msg/: CamParam.msg  Extrinsic.msg  IMU.msg  Intrinsic.msg  State.msg  StateMultiArray.msg
robot_package/nodes/: hand_tracking.py  image_tester.py  images_saver.py  nn_service.py  nnclient.py  nnserv.py  rs_test.py  sort.py  test.py  tomato_baseline.py  tomato_baseline2.py  tomato_baseline_threads.py  tomato_demo.py  vision_simulation.py
robot_package/src/: device.hxx  realsense_manager.cxx  vision_node_template.cpp  vision_node_test.cpp
robot_package/src/agro/: camera_simulation.py  imu_simulation.py  jabra_cam.py  jabra_manager.py  motor.py  motor_manager.py  motor_simulation.py  porthandler.py  rgbd_cam.py  rgbd_manager.py  ros_jabra.py
robot_package/tmp/: agro_simulation.sh  ros_init.sh
robot_package/world/: robot_control.world
robot_simulation/: CMakeLists.txt  README.md  package.xml  robot.sdf  robot_control.world  robot_control_plugin.cc  setup.py
robot_simulation/launch/: robot_control_world.launch
robot_simulation/models/greenhouse_mini/: greenhouse.sdf  model.config
robot_simulation/models/greenhouse_mini/meshes/: greenhouse_mini.mtl
robot_simulation/models/mecanum_wheel/: mecanum_wheel.sdf  model.config
robot_simulation/models/rail_wheel/: model.config  rail_wheel.sdf
robot_simulation/models/robot_body/: robot_body.sdf
robot_simulator/: world.sdf
robot_simulator/models/camera/: camera.sdf
robot_simulator/models/greenhouse/: greenhouse.sdf  model.config
robot_simulator/models/rail_wheel/meshes/: rail_wheel.mtl
src/agrobot_controller/: CMakeLists.txt  agrobot_controller.xml  compile_commands.json  package.xml
src/agrobot_controller/.cache/clangd/index/: agrobot_controller.cpp.3B1335375B86038A.idx  agrobot_controller.hpp.918D1F38C47BD34A.idx
src/agrobot_controller/include/agrobot_controller/: agrobot_controller.hpp  agrobot_odometry.hpp
src/agrobot_controller/src/: agrobot_controller.cpp  agrobot_odometry.cpp
src/agrobot_controller/test/: test_load_agrobot_controller.cpp
src/agrobot_sim/: package.xml  setup.cfg  setup.py
src/agrobot_sim/config/: bridge_config.yaml  nav2_params.yaml  nav_config.yaml
src/agrobot_sim/launch/: gazebo.launch.py
src/agrobot_sim/meshes/mini_greenhouse/: mini_greenhouse.dae
src/agrobot_sim/models/mini_greenhouse/: mini_greenhouse.sdf.xml  model.config
src/agrobot_sim/worlds/: empty.sdf.xml  mini_greenhouse.sdf.xml
src/agrobot_urdf/: package.xml  setup.cfg  setup.py
src/agrobot_urdf/config/: agrobot_config.rviz  ros2_control.yaml
src/agrobot_urdf/launch/: rviz.launch.py
src/agrobot_urdf/meshes/mecanum_wheel/: mecanum_wheel.mtl  mecanum_wheel_left.mtl  mecanum_wheel_right.mtl
src/agrobot_urdf/meshes/rail_wheel/: rail_wheel.mtl
src/agrobot_urdf/meshes/robot_body/: robot_body.mtl
src/agrobot_urdf/urdf/: mecanum_wheel.urdf.xacro.xml  rail_wheel.urdf.xacro.xml  robot.urdf.xacro.xml  robot_body.urdf.xacro.xml
src/agrobot_urdf/urdf/camera/: camera.urdf.xacro.xml
src/agrobot_urdf/urdf/mecanum_wheel/: mecanum_wheel.ros2_control.urdf.xacro.xml  mecanum_wheel.urdf.xacro.xml
src/agrobot_urdf/urdf/radar/: radar.urdf.xacro.xml
src/agrobot_urdf/urdf/robot/: robot.ros2_control.urdf.xacro.xml  robot.urdf.xacro.xml
src/agrobot_urdf/urdf/robot_body/: robot_body.urdf.xacro.xml
src/robot_simulation/: .gitignore  model.config  robot.sdf
src/robot_simulation/models/camera/: camera.sdf  model.config
src/robot_simulation/models/greenhouse_mini/: greenhouse.sdf
src/robot_simulation/models/mecanum_wheel/: mecanum_wheel.sdf
src/robot_simulation/models/mecanum_wheel/meshes/: mecanum_wheel.mtl
src/robot_simulation/models/rail_wheel/: rail_wheel.sdf
src/robot_simulation/models/robot_body/: model.config  robot_body.sdf
src/robot_simulation/models/robot_body/meshes/: robot_body.mtl
src/robot_simulation/tmp/: run_robot_control.sh
src/robot_simulation/world/: robot_control.world
