<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agrobot_sim</name>
  <version>0.0.0</version>
  <description>Agrobot simulation package</description>
  <maintainer email="ilyaandry35@gmail.com">Ilya Andriyanov</maintainer>
  <license>Apache-2.0</license>

  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>agrobot_urdf</depend>
  <depend>urdf_launch</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
